<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal"
    android:id="@+id/dialog_custom_search"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_text_dialog_custom_search_query" />

    <EditText
        android:id="@+id/edit_text_dialog_custom_search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_hint_dialog_custom_search_query_hint"
        android:inputType="textPersonName" />

    <CheckBox
        android:id="@+id/check_box_dialog_custom_search_advanced_search"
        android:background="@color/actualidad_gubernamental_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_text_dialog_custom_search_advanced_search" />

    <LinearLayout
        android:id="@+id/linear_layout_dialog_custom_search_advanced_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_text_dialog_custom_search_fecha_inicial" />

            <EditText
                android:id="@+id/edit_text_dialog_custom_search_first_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="none"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_text_dialog_custom_search_fecha_final" />

            <EditText
                android:id="@+id/edit_text_dialog_custom_search_second_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="none"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>