<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.institutopacifico.actualidad.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/default_main_bar_height"
        android:background="@color/defaut_background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_main_bar_height"
            android:background="@color/defaut_background_color"
            android:orientation="vertical"
            android:padding="@dimen/spacing_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_dialog_custom_sign_up_email_text_view"
                android:textSize="@dimen/font_large" />

            <EditText
                android:id="@+id/edit_text_fragment_other_password_recovery_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message_dialog_custom_sign_up_email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/text_view_fragment_other_password_recovery_bad_email_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message_sign_up_fragment_email"
                android:textColor="@color/red" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_normal"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/button_ok_fragment_other_password_recovery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/message_sign_up_button_ok" />

                <Button
                    android:id="@+id/button_cancelar_fragment_other_password_recovery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:text="@string/message_sign_up_button_cancel" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/defaut_background_color" />
</LinearLayout>