<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:fitsSystemWindows="true"
    android:orientation="vertical"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/defaut_background_color"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/defaut_background_color"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="false"
                    android:background="@drawable/background_tile_main"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_very_huge"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:adjustViewBounds="true"
                        android:gravity="center"
                        android:padding="@dimen/spacing_small"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_logo_actualidad_gubernamental_alpha" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/spacing_1dp"
                        android:layout_marginBottom="0dp"
                        android:background="@color/colorPrimaryDark"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/defaut_background_color"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/text_view_fragment_account_account_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"

                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_large" />
                </LinearLayout>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@color/defaut_background_color"
                    android:padding="@dimen/spacing_large"
                    card_view:cardCornerRadius="@dimen/spacing_normal"
                    card_view:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/defaut_background_color"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/edit_text_fragment_account_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:backgroundTint="@color/silver"
                            android:hint="Email"
                            android:inputType="textEmailAddress" />

                        <EditText
                            android:id="@+id/edit_text_fragment_account_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:backgroundTint="@color/silver"
                            android:hint="Password"
                            android:inputType="textPassword" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@color/defaut_background_color"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_fragment_account_sign_in"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimaryDark"
                                android:tag="custom_login_button"
                                android:text="@string/instituto_pacifico_sign_in"
                                android:textColor="@color/white" />

                            <Button
                                android:id="@+id/button_fragment_account_sign_up"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:tag="custom_signup_button"
                                android:text="@string/instituto_pacifico_sign_up"
                                android:textColor="@color/white" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/defaut_background_color"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/button_fragment_account_logout"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorAccent"
                                android:text="@string/activity_login_logout"
                                android:textColor="@color/white" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/text_view_fragment_account_help_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/message_have_you_lost_your_password"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_large" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/defaut_background_color" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>